<resources>
    <string name="app_name">medical</string>
    <string name="title_activity_login">تسجيل الدخول</string>
    <string name="prompt_email">إييميل</string>
    <string name="prompt_password">كلمة السر</string>
    <string name="action_sign_in">إنشاء حساب</string>
    <string name="action_sign_in_short">تسجيل دخول</string>
    <string name="welcome">"مرحبا"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">كلمة السر يجب أن تكون أكير من 5 أحرف</string>
    <string name="login_failed">"فشل تسجيل الدخول"</string>
    <string name="google">جوجل</string>
    <string name="title_activity_home">صفحة الرئيسة</string>
    <string name="title_home">صفحة الرئيسية</string>
    <string name="title_dashboard">الموضوع</string>
    <string name="label_message">الرسائل</string>
    <string name="title_notifications">الإشعارات</string>
    <string name="prostate_cancer">Prostate cancer</string>
    <string name="skin_cancer">skin cancer</string>
    <string name="liver_cancer">Liver Cancer</string>
    <string name="pancreas_cancer">Pancreas cancer</string>
    <string name="kidney_cancer">Kidney cancer</string>
    <string name="brain_cancer">brain cancer</string>
    <string name="bone_cancer">bone cancer</string>
    <string name="oropharyngeal_cancer">Oropharyngeal cancer</string>
    <string name="type_a_message">Type a message</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="type_message">Type Message</string>
    <string name="updateTitle">التعديل على العنوان</string>
    <string name="updateImage">تعديل الصورة</string>
    <string name="updateTopic">التعديل على عنوان الموضوع</string>
    <string name="update">تعديل</string>
    <string name="updateDesc">التعديل على الوصف</string>
    <string name="add_a_new_advice">Add a new advice</string>
    <string name="add_image">Add image</string>
    <string name="add_a_title_to_the_advice">إضافة نصيحة جديدة</string>
    <string name="add_a_description_to_the_advice">وصف النصيحة</string>
    <string name="topic">Topic</string>
    <string name="upload_viedo">تحميل الفيديو ...</string>
    <string name="add">add</string>
    <string name="add_a_new_topic">إضافة موضوع</string>
    <string name="add_a_title_to_the_topic">عنوان الموضوع</string>
</resources>